codama-macros/tests/codama_attribute/program_directive/missing_address.fail.rs
use codama_macros::codama;

#[codama(program(name = "associatedToken"))]
pub struct Test;

fn main() {}
